예외메세지 및 테스트 jacoco 설정